[gd_scene load_steps=4 format=2]

[ext_resource path="res://Join.gd" type="Script" id=2]
[ext_resource path="res://Host.gd" type="Script" id=3]
[ext_resource path="res://Lobby.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Lobby" type="Node" parent="."]
script = ExtResource( 4 )

[node name="LobbyMenu" type="Panel" parent="."]
margin_left = -255.255
margin_top = -162.01
margin_right = 257.745
margin_bottom = 160.99
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="LobbyMenu"]
margin_left = 122.434
margin_top = 91.9439
margin_right = 215.434
margin_bottom = 105.944
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="LobbyMenu"]
margin_left = 265.189
margin_top = 131.888
margin_right = 348.189
margin_bottom = 147.888
text = "IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP text" type="TextEdit" parent="LobbyMenu"]
margin_left = 296.0
margin_top = 126.0
margin_right = 429.0
margin_bottom = 156.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextEdit" parent="LobbyMenu"]
margin_left = 179.0
margin_top = 87.0
margin_right = 428.0
margin_bottom = 117.0
text = "Bobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="LobbyMenu"]
margin_left = 117.0
margin_top = 133.0
margin_right = 239.0
margin_bottom = 197.0
rect_pivot_offset = Vector2( 79.5671, 52.7557 )
text = "Host"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="LobbyMenu"]
margin_left = 262.781
margin_top = 165.383
margin_right = 427.781
margin_bottom = 194.383
rect_pivot_offset = Vector2( 79.5671, 52.7557 )
text = "Join"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Panel" parent="."]
margin_left = -253.794
margin_top = -163.0
margin_right = 254.206
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumPlayers" type="Label" parent="Game"]
margin_left = 7.16376
margin_top = 11.1118
margin_right = 47.1638
margin_bottom = 25.1118
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersLabel" type="Label" parent="Game"]
margin_left = 526.157
margin_top = 41.3359
margin_right = 576.157
margin_bottom = 55.3359
text = "Players:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Label" parent="Game"]
margin_left = 525.224
margin_top = 65.4983
margin_right = 628.224
margin_bottom = 225.498
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" type="Label" parent="Game"]
margin_left = 157.267
margin_top = 100.641
margin_right = 207.267
margin_bottom = 114.641
text = "Deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckList" type="Label" parent="Game"]
margin_left = 156.0
margin_top = 120.0
margin_right = 336.0
margin_bottom = 172.0
text = "[]
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1" type="Panel" parent="Game"]
margin_left = 209.757
margin_top = 253.054
margin_right = 314.757
margin_bottom = 293.054
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Game/P1"]
margin_left = 5.36
margin_top = 6.98241
margin_right = 73.36
margin_bottom = 20.9824
text = "P1 (dealer)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Label" parent="Game/P1"]
margin_left = 3.31757
margin_top = 24.7279
margin_right = 71.3176
margin_bottom = 38.7279
text = "[]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2" type="Panel" parent="Game"]
margin_left = 9.07932
margin_top = 200.729
margin_right = 114.079
margin_bottom = 240.729
rect_rotation = -90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Game/P2"]
margin_left = 5.36
margin_top = 6.98241
margin_right = 73.36
margin_bottom = 20.9824
text = "P2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Label" parent="Game/P2"]
margin_left = 3.31757
margin_top = 24.7279
margin_right = 71.3176
margin_bottom = 38.7279
text = "[]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P3" type="Panel" parent="Game"]
margin_left = 216.298
margin_top = 21.2942
margin_right = 321.298
margin_bottom = 61.2942
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Game/P3"]
margin_left = 5.36
margin_top = 6.98241
margin_right = 73.36
margin_bottom = 20.9824
text = "P3
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Label" parent="Game/P3"]
margin_left = 3.31757
margin_top = 24.7279
margin_right = 71.3176
margin_bottom = 38.7279
text = "[]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P4" type="Panel" parent="Game"]
margin_left = 495.464
margin_top = 117.484
margin_right = 600.464
margin_bottom = 157.484
rect_rotation = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Game/P4"]
margin_left = 5.36
margin_top = 6.98241
margin_right = 73.36
margin_bottom = 20.9824
text = "P4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Label" parent="Game/P4"]
margin_left = 3.31757
margin_top = 24.7279
margin_right = 71.3176
margin_bottom = 38.7279
text = "[]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DealerButtons" type="Node2D" parent="Game"]

[node name="Deal 1 P1" type="Button" parent="Game/DealerButtons"]
margin_left = 167.884
margin_top = 264.042
margin_right = 208.884
margin_bottom = 284.042
text = "Deal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deal 1 P2" type="Button" parent="Game/DealerButtons"]
margin_left = 11.4773
margin_top = 204.338
margin_right = 52.4773
margin_bottom = 224.338
text = "Deal"

[node name="Deal 1 P3" type="Button" parent="Game/DealerButtons"]
margin_left = 168.725
margin_top = 31.1132
margin_right = 209.725
margin_bottom = 51.1132
text = "Deal"

[node name="Deal 1 P4" type="Button" parent="Game/DealerButtons"]
margin_left = 453.089
margin_top = 92.9492
margin_right = 494.089
margin_bottom = 112.949
text = "Deal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shuffel Deck" type="Button" parent="Game/DealerButtons"]
margin_left = 145.134
margin_top = 313.598
margin_right = 236.134
margin_bottom = 333.598
text = "Shuffel Deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deal All" type="Button" parent="Game/DealerButtons"]
margin_left = 272.919
margin_top = 314.392
margin_right = 334.919
margin_bottom = 334.392
text = "Deal All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Game/DealerButtons"]
margin_left = 383.244
margin_top = 338.996
margin_right = 445.244
margin_bottom = 358.996
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LobbyMenu/Host" to="Lobby" method="_on_Host_pressed"]
[connection signal="pressed" from="LobbyMenu/Join" to="Lobby" method="_on_Join_pressed"]
[connection signal="pressed" from="Game/DealerButtons/Deal 1 P1" to="Lobby" method="_on_Deal_1_P1_pressed"]
[connection signal="pressed" from="Game/DealerButtons/Deal 1 P2" to="Lobby" method="_on_Deal_1_P2_pressed"]
[connection signal="pressed" from="Game/DealerButtons/Deal 1 P3" to="Lobby" method="_on_Deal_1_P3_pressed"]
[connection signal="pressed" from="Game/DealerButtons/Deal 1 P4" to="Lobby" method="_on_Deal_1_P4_pressed"]
[connection signal="pressed" from="Game/DealerButtons/Shuffel Deck" to="Lobby" method="_on_Shuffel_Deck_pressed"]
[connection signal="pressed" from="Game/DealerButtons/Deal All" to="Lobby" method="_on_Deal_All_pressed"]
[connection signal="pressed" from="Game/DealerButtons/Reset" to="Lobby" method="_on_Reset_pressed"]
